# yodi

./: .dockerignore  .gitignore  .gitmodules  .travis.yml  Dockerfile.heroku-worker  Makefile  README.md  app.json  go.mod  go.sum  heroku.yml
.github/workflows/: build.yml  master.yml
ci/: command.json  result.json  test_broker.sh
client/: agent.c  base64.c  base64_test.c  client.c  command.c  command_test.c  compress.c  compress_test.c  cpu.c  cpu_test.c  cross_compile.sh  log.c  meson.build  meson_options.txt  signal.c  watchdog.c  worker.c  yodi.c  yodi.h
client/include/: yodi.h
client/include/yodi/: auto.h  base64.h  command.h  compress.h  cpu.h  db.h  log.h  signal.h
client/subprojects/: libressl  mbedtls
cmd/broker/: main.go
cmd/mailman/: main.go
cmd/web/: main.go
deploy/docker/: Dockerfile.broker  Dockerfile.mailman  Dockerfile.web
deploy/heroku/: Dockerfile.web
deploy/k8s/: broker.yaml  deployment-broker.yaml  deployment-mailman.yaml  deployment-redis.yaml  deployment-web.yaml  mailman.yaml  redis.yaml  service-broker.yaml  service-redis.yaml  service-web.yaml  web.yaml
docker/: Dockerfile.broker  Dockerfile.mailman  Dockerfile.web
k8s/: deployment-broker.yaml  deployment-mailman.yaml  deployment-redis.yaml  deployment-web.yaml  service-broker.yaml  service-redis.yaml  service-web.yaml
pkg/mqtt/: auth.go  broker.go  broker_test.go  client.go  connect.go  connect_ack.go  header.go  length.go  message.go  mqtt.go  mqtt_test.go  ping.go  ping_response.go  publish.go  publish_ack.go  qos.go  redis.go  store.go  string.go  subscribe.go  subscribe_ack.go  unsubscribe.go  unsubscribe_ack.go  websocket.go
pkg/store/: map.go  memory_key.go  memory_map.go  memory_queue.go  memory_set.go  memory_store.go  queue.go  redis_key.go  redis_map.go  redis_queue.go  redis_set.go  redis_store.go  set.go  store.go
